// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component should match Section snapshot 1`] = `
<section
  className="themes-section"
>
  <div
    className="max-container "
  >
    <div
      className="title-section"
    >
      <div>
        <div
          className="title-hyphen"
        >
           
        </div>
        <h1
          className="section-title section-title1 dark-title-1"
        >
          FooBar
        </h1>
      </div>
    </div>
    <div
      className="content-section margin-l"
    >
      <div>
        Section content
      </div>
    </div>
  </div>
</section>
`;

exports[`Section component should match Section with 1 parent snapshot 1`] = `
<section
  className="themes-section"
>
  <div
    className="max-container "
  >
    <div
      className="title-section"
    >
      <h2
        className="section-title section-title-2 dark-title-1"
      >
        <span
          className="section-title-index"
        >
          1.2.
        </span>
        FooBar
      </h2>
    </div>
    <div
      className="content-section margin-l"
    >
      <div>
        Section content
      </div>
    </div>
  </div>
</section>
`;

exports[`Section component should match Section with 2 parents snapshot 1`] = `
<section
  className="themes-section"
>
  <div
    className="max-container "
  >
    <div
      className="title-section"
    >
      <h3
        className="section-title section-title-3 dark-title-1"
      >
        <span
          className="section-title-index"
        >
          b.
        </span>
        FooBar
      </h3>
    </div>
    <div
      className="content-section margin-l"
    >
      <div>
        Section content
      </div>
    </div>
  </div>
</section>
`;

exports[`Section component should match Section with translate prop 1`] = `
<section
  className="themes-section"
>
  <div
    className="max-container "
  >
    <div
      className="title-section"
    >
      <div>
        <div
          className="title-hyphen"
        >
           
        </div>
        <h1
          className="section-title section-title1 dark-title-1"
        >
          <span
            className="section-title-index"
          >
            1.
          </span>
          <span>
            home
          </span>
        </h1>
      </div>
    </div>
    <div
      className="content-section margin-l"
    >
      <div>
        Section content
      </div>
    </div>
  </div>
</section>
`;
